[package]

name = "marafet_css"
description = "Super-cool templating library (CSS compiler)"
license = "MIT"
readme = "README.rst"
keywords = ["templates", "js", "css", "html"]
homepage = "http://github.com/tailhook/marafet"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[lib]
name = "marafet_css"
path = "src/lib.rs"

[dependencies.marafet_parser]
path = "../marafet_parser"

[dependencies.marafet_util]
path = "../marafet_util"
