[package]

name = "marafet_parser"
description = "Super-cool templating library (parser)"
license = "MIT"
readme = "README.rst"
keywords = ["templates", "js", "css", "html"]
homepage = "http://github.com/tailhook/marafet"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
parser-combinators = "*"
unicode-segmentation = "*"

[lib]
name = "marafet_parser"
path = "src/lib.rs"

[dependencies.marafet_util]
path = "../marafet_util"
